force-app/main/default/objects/ssot__ProgramTermApplicationTimeline__dlm/fields/ssot__ActionPlanTemplateVersionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionPlanTemplateVersionId__c</fullName>
    <label>Action Plan Template Version</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionPlanTemplateVersionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>