force-app/main/default/objects/ssot__ProgramTermApplicationTimeline__dlm/fields/ssot__LearningProgramPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningProgramPlanId__c</fullName>
    <label>Learning Program Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningProgramPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>