force-app/main/default/objects/ssot__ProgramTermApplicationTimeline__dlm/fields/ssot__rel_1719817651692_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817651692_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramTermApplicationTimeline_Acade_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>ProgramTermApplicationTimeline_Acade_rel</relationshipLabel>
    <relationshipName>rel_1719817651692_end</relationshipName>
    <type>Lookup</type>
</CustomField>