force-app/main/default/objects/ssot__ProgramTermApplicationTimeline__dlm/fields/ssot__rel_1719818166709_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818166709_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProgramTermApplicationTimeline_Actio_rel</label>
    <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
    <relationshipLabel>ProgramTermApplicationTimeline_Actio_rel</relationshipLabel>
    <relationshipName>rel_1719818166709_end</relationshipName>
    <type>Lookup</type>
</CustomField>